# LOl

./: .gitignore  CMakeLists.txt  README.md  task.md
dolbaeb/: func.cpp  func.h  globals.h  mainshit.cpp  model.cpp  model.h  spice2.cpp
shader/: fragment_shader.glsl  vertex_shader.glsl
src/: functions.cpp  functions.h  main.cpp  model.cpp  model.h
